# raid

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: file.rs
fuzz/: Cargo.toml
fuzz/src/: main.rs
plotting/: bigger.txt  cread.py  crecover.py  cwrite.py  dread.py  drecover.py  dwrite.py  file_read_write.py  small.txt
src/: distributed.rs  file.rs  fuzz.rs  galois.rs  head_node.rs  lib.rs  main.rs  matrix.rs  matrix_slice.rs  raid.rs  single.rs
src/raid/: controller.rs  distributed.rs  mod.rs  single.rs
