[package]
name = "raid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
crossbeam-channel = "0.5.6"
oneshot = "0.1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "file"
harness = false

[profile.release]
debug = true